--- a/Fakenewsclaasify.ipynb
+++ b/Fakenewsclaasify.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "#Loading Data\n",
     "import pandas as pd\n",
-    "df=pd.read_csv(\"C:/Users/91704/30 projects/WELFake_Dataset.csv\")\n"
+    "df=pd.read_csv(\"WELFake_Dataset.csv")\n"
    ]
   },
   {
